# traffic-counter-statistic

./: .env.example  .gitignore  README.md  docker-compose.yml  manifest.json  worker.js
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/database/: __init__.py  collections.py  connection.py  query.py
extension/: .env.example  authentication.js  index.html  main.css  main.html  main.js  manifest.json  package-lock.json  package.json  popup.js  webpack.config.js  worker.js
